[package]
name = "async_singleflight"
version = "0.3.0"
authors = ["Pure White <wudi@purewhite.io>"]
edition = "2018"
description = "Async singleflight."
repository = "https://github.com/PureWhiteWu/async_singleflight"
license = "MIT OR Apache-2.0"
keywords = ["singleflight", "async"]
categories = ["asynchronous", "concurrency", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1.8"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
